--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@geoapify/geocoder-autocomplete": "^1.5.1",
+    "@geoapify/leaflet-address-search-plugin": "^1.0.2",
+    "@geoapify/react-geocoder-autocomplete": "^1.5.0",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
@@ -19,12 +22,15 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-geocoder-autocomplete": "^3.1.0",
     "react-leaflet": "^4.2.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-use": "^17.4.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.3"
+    "@types/leaflet": "^1.9.3",
+    "@types/react-places-autocomplete": "^7.2.9"
   }
 }
