--- a/package.json
+++ b/package.json
@@ -15,23 +15,32 @@
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "firebase": "^9.21.0",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "18.2.0",
     "react-geocoder-autocomplete": "^3.1.0",
+    "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
     "react-places-autocomplete": "^7.3.0",
+    "react-router-dom": "^6.11.0",
     "react-use": "^17.4.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
     "@types/leaflet": "^1.9.3",
-    "@types/react-places-autocomplete": "^7.2.9"
+    "@types/react-places-autocomplete": "^7.2.9",
+    "babel-loader": "^9.1.2"
   }
 }
